--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "siddharthkp",
   "scripts": {
     "lint": "eslint src",
-    "build": "babel src -d lib && babel test/src -d test/lib",
+    "build": "babel src --out-dir lib && babel test/src --out-dir test/lib",
     "run-tests": "cd example && mocha ../test/lib",
     "test": "npm run build && npm run run-tests"
   },
@@ -21,30 +21,38 @@
   "dependencies": {
     "chokidar": "2.0.0",
     "colors": "1.1.2",
-    "detective": "5.0.2",
-    "detective-es6": "1.2.0",
     "glob": "7.1.0",
     "is-builtin-module": "1.0.0",
     "log-symbols": "1.0.2",
     "ora": "0.3.0",
+    "node-source-walk": "^4.2.0",
+    "vue-template-compiler": "^2.6.11",
     "package-json": "2.4.0",
     "which-pm": "^2.0.0",
     "yargs": "6.3.0"
   },
   "devDependencies": {
-    "babel-cli": "6.14.0",
-    "babel-preset-es2015": "6.14.0",
+    "@babel/cli": "^7.12.8",
+    "@babel/core": "^7.12.9",
+    "@babel/preset-env": "^7.12.7",
     "chai": "3.5.0",
-    "eslint": "4.18.2",
-    "eslint-config-airbnb": "12.0.0",
-    "eslint-plugin-import": "1.16.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "6.4.1",
+    "core-js": "^3.6.5",
+    "eslint": "^4.19.1",
+    "eslint-config-prettier": "^6.15.0",
     "mocha": "3.1.2"
   },
   "babel": {
     "presets": [
-      "es2015"
+      [
+        "@babel/preset-env",
+        {
+          "targets": {
+            "node": "6"
+          },
+          "useBuiltIns": "usage",
+          "corejs": "3.6.5"
+        }
+      ]
     ]
   },
   "prettier": {
