--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "is-builtin-module": "1.0.0",
     "log-symbols": "1.0.2",
     "ora": "0.3.0",
+    "node-notifier": "^6.0.0",
     "node-source-walk": "^4.2.0",
     "vue-template-compiler": "^2.6.11",
     "package-json": "2.4.0",
